2nd fix frontend

--- a/frontend/assets/css/ModificaStyle.css
+++ b/frontend/assets/css/ModificaStyle.css
@@ -164,6 +164,22 @@ Buttons
 
 /* 
 ---------------------------------------------
+Form - errors
+--------------------------------------------- 
+*/
+
+.noterror {
+    display: none;
+}
+
+.error {
+    display: inline;
+    color: DarkRed;
+    font-size: 11px;
+}
+
+/* 
+---------------------------------------------
 Footer
 --------------------------------------------- 
 */
